--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+    <div class="container contained">
       <h1>Generate your Akan name!</h1>
       <form class="myform" action="index.html" method="post" action="https://facebook.com">
         <label for="year-of-birth">
