--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@
       <form class="myform" action="index.html" method="post" action="https://facebook.com">
         <label for="year-of-birth">
           Year:
-          <input type="text" name="year-of-birth" placeholder="YYYY">
+          <input class="year-input" type="text" name="year-of-birth" placeholder="YYYY">
         </label>
         <label for="month-of-birth">
           Month:
-          <input type="text" name="month-of-birth" placeholder="MM">
+          <input class="month-input" type="text" name="month-of-birth" placeholder="MM">
         </label>
         <label for="day-of-birth">
           Day:
-          <input type="text" name="day-of-birth" placeholder="DD">
+          <input class="day-input" type="text" name="day-of-birth" placeholder="DD">
         </label>
         <br><br>
         <label for="select-gender">
           Male:
-          <input type="radio" name="select-gender">
+          <input class="male-input" type="radio" name="select-gender">
           Female:
-          <input type="radio" name="select-gender">
+          <input class="female-input" type="radio" name="select-gender">
         </label>
         <br><br>
-        <input type="submit" name="" value="Generate name">
+        <input class="get-name" type="submit" name="" value="Generate name">
       </form>
     </div>
   </body>
