added js code and implimented to html

--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
           <input class="day-input" type="text" name="day-of-birth" placeholder="DD">
         </label>
         <br><br>
-        <label for="select-gender">
-          Male:
-          <input class="male-input" type="radio" name="select-gender">
-          Female:
-          <input class="female-input" type="radio" name="select-gender">
+        <label for="gender">
+          Gender:
+          <input class="gender-input" type="text" name="gender" placeholder="Male or Female">
         </label>
         <br><br>
         <input class="get-name" type="submit" name="" value="Generate name">
       </form>
     </div>
+
+    <script src="script/script.js" ></script>
+    
   </body>
 </html>
