--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/ghana.png" type="img/jpg">
   </head>
   <body>
     <div class="container contained">
@@ -34,6 +35,6 @@
     </div>
 
     <script src="script/script.js" ></script>
-    
+
   </body>
 </html>
