--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
       <form class="myform" action="index.html" method="post" action="https://facebook.com">
         <label for="year-of-birth">
           Year:
-          <input class="year-input" type="text" name="year-of-birth" placeholder="YYYY">
+          <input id="year-input" type="text" name="year-of-birth" placeholder="YYYY">
         </label>
         <label for="month-of-birth">
           Month:
-          <input class="month-input" type="text" name="month-of-birth" placeholder="MM">
+          <input id="month-input" type="text" name="month-of-birth" placeholder="MM">
         </label>
         <label for="day-of-birth">
           Day:
-          <input class="day-input" type="text" name="day-of-birth" placeholder="DD">
+          <input id="day-input" type="text" name="day-of-birth" placeholder="DD">
         </label>
         <br><br>
         <label for="gender">
           Gender:
-          <input class="gender-input" type="text" name="gender" placeholder="Male or Female">
+          <input id="gender-input" type="text" name="gender" placeholder="Male or Female">
         </label>
         <br><br>
-        <input class="get-name" type="submit" name="" value="Generate name">
+        <input id="get-name" type="submit" name="" value="Generate name">
       </form>
     </div>
-
+    <!--
     <script src="script/script.js" ></script>
-
+    -->
   </body>
 </html>
