added trial.js and linked the script to html

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <input id="get-name" type="submit" name="" value="Generate name">
       </form>
     </div>
-    <!--
-    <script src="script/script.js" ></script>
-    -->
+
+    <script src="script/trial.js" ></script>
+    
   </body>
 </html>
