--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container contained">
       <h1>Generate your Akan name!</h1>
-      <form class="myform" action="index.html" method="post" action="index.html">
+      <form class="myform" action="index.html" method="get" action="index.html">
         <label for="year-of-birth">
           Year:
           <input id="year-input" type="text" name="year-of-birth" placeholder="YYYY">
