removed style class from html and css files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/ghana.png" type="img/jpg">
   </head>
   <body>
-    <div class="container contained">
+    <div class="container">
       <h1>Generate your Akan name!</h1>
       <form class="myform" action="index.html" method="post" action="index.html">
         <label for="year-of-birth">
