--- a/index.html
+++ b/index.html
@@ -3,38 +3,45 @@
   <head>
     <meta charset="utf-8">
     <title>Akan Name Generator</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="icon" href="images/ghana.png" type="img/jpg">
   </head>
   <body>
-    <div class="container">
-      <h1>Generate your Akan name!</h1>
-      <form class="myform" action="index.html" method="post" action="index.html">
-        <label for="year-of-birth">
-          Year:
-          <input id="year-input" type="text" name="year-of-birth" placeholder="YYYY">
-        </label>
-        <label for="month-of-birth">
-          Month:
-          <input id="month-input" type="text" name="month-of-birth" placeholder="MM">
-        </label>
-        <label for="day-of-birth">
-          Day:
-          <input id="day-input" type="text" name="day-of-birth" placeholder="DD">
-        </label>
-        <br><br>
-        <label for="gender">
-          Gender:
-          <input id="gender-input" type="text" name="gender" placeholder="Male or Female">
-        </label>
-        <br><br>
-        <input id="get-name" type="submit" name="" value="Generate name">
-      </form>
+    <div class="content">
+      <div class="container">
+        <h1>Generate your Akan name!</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <form class="myform" onsubmit="return getAkanName()">
+          <label for="year-of-birth">
+            Year:
+            <input id="year-input" type="text" name="year-of-birth" placeholder="YYYY" value="">
+          </label>
+          <label for="month-of-birth">
+            Month:
+            <input id="month-input" type="text" name="month-of-birth" placeholder="MM" value="">
+          </label>
+          <label for="day-of-birth">
+            Day:
+            <input id="day-input" type="text" name="day-of-birth" placeholder="DD" value="">
+          </label>
+          <br><br>
+          <label for="gender">
+            Gender:
+            <input id="gender-input" type="text" name="gender" placeholder="Male or Female" value="">
+          </label>
+          <br><br>
+          <input id="get-name" type="submit" name="" value="Generate name">
+        </form>
+        
+        <h4><strong>Your Akan name will be displayed below:</strong></h4>
+        <p id="result"></p>
+      </div>
     </div>
 
-    <script src="script/trial.js" ></script>
+    <script src="script/trial.js" > </script>
 
   </body>
 </html>
