renamed js file

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
           <br><br>
           <input id="get-name" type="submit" name="" value="Generate name">
         </form>
-        
+
         <h4><strong>Your Akan name will be displayed below:</strong></h4>
         <p id="result"></p>
       </div>
     </div>
 
-    <script src="script/trial.js" > </script>
+    <script src="script/akan.js" > </script>
 
   </body>
 </html>
