added user story to app

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <div class="content">
       <div class="container">
-        <h1>Generate your Akan name!</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+        <h1>Welcome to the Akan name generator!</h1>
+        <p>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. <a class="research" href="https://en.wikipedia.org/wiki/Akan_names">Akan names</a> are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </p>
+        <p>To find out what your Akan name is, proceed to filling the form below and clicking the generate name button.
         <form class="myform" onsubmit="return getAkanName()">
           <label for="year-of-birth">
             Year:
