edited user story

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
       <div class="container">
         <h1>Welcome to the Akan name generator!</h1>
-        <p>This is a web application that takes a user's birthday and calculates the day of the week they were born and then depending on their gender outputs their Akan Name. <a class="research" href="https://en.wikipedia.org/wiki/Akan_names" target="_blank">Akan names</a> are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </p>
+        <p>Hello there! This is a web application that takes your birthday details and calculates the day of the week you were born and then depending on your gender, outputs your Akan Name. <a class="research" href="https://en.wikipedia.org/wiki/Akan_names" target="_blank">Akan names</a> are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </p>
         <p>To find out what your Akan name is, proceed to filling the form below and clicking the generate name button.
         <form class="myform" onsubmit="return getAkanName()">
           <label for="year-of-birth">
