add border radius to content class,change input type from text to number

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <form class="myform" onsubmit="return getAkanName()">
           <label for="year-of-birth">
             Year:
-            <input id="year-input" type="text" name="year-of-birth" placeholder="YYYY" value="">
+            <input id="year-input" type="number" name="year-of-birth" placeholder="YYYY" value="">
           </label>
           <label for="month-of-birth">
             Month:
-            <input id="month-input" type="text" name="month-of-birth" placeholder="MM" value="">
+            <input id="month-input" type="number" name="month-of-birth" placeholder="MM" value="">
           </label>
           <label for="day-of-birth">
             Day:
-            <input id="day-input" type="text" name="day-of-birth" placeholder="DD" value="">
+            <input id="day-input" type="number" name="day-of-birth" placeholder="DD" value="">
           </label>
           <br><br>
           <label for="gender">
