change gender input to a radio button and take in the values on js

--- a/index.html
+++ b/index.html
@@ -16,24 +16,33 @@
         <form class="myform" onsubmit="return getAkanName()">
           <label for="year-of-birth">
             Year:
-            <input id="year-input" type="number" name="year-of-birth" placeholder="YYYY" value="">
+            <input id="year-input" type="number" name="year-of-birth" placeholder="YYYY" value="" required>
           </label>
           <label for="month-of-birth">
             Month:
-            <input id="month-input" type="number" name="month-of-birth" placeholder="MM" value="">
+            <input id="month-input" type="number" name="month-of-birth" placeholder="MM" value="" required>
           </label>
           <label for="day-of-birth">
             Day:
-            <input id="day-input" type="number" name="day-of-birth" placeholder="DD" value="">
+            <input id="day-input" type="number" name="day-of-birth" placeholder="DD" value="" required>
           </label>
-          <br><br>
+          <br>
           <label for="gender">
-            Gender:
-            <input id="gender-input" type="text" name="gender" placeholder="Male or Female" value="">
+            <p>Select your gender: </p>
+            Male
+            <input id="male-input" type="radio" name="gender" value="male" required>
+            Female
+            <input id="female-input" type="radio" name="gender" value="female" required>
+
           </label>
           <br><br>
           <input id="get-name" type="submit" name="" value="Generate name">
+          <br><br>
         </form>
+        <form onsubmit="return clearInput()">
+          <input class="clear" type="submit" value="Clear input">
+        </form>
+
 
         <h4><strong>Your Akan name will be displayed below:</strong></h4>
         <p id="result"></p>
