add id to h4 tag

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </form>
 
 
-        <h4><strong>Your Akan name will be displayed below:</strong></h4>
+        <h4 id = display-name><strong>Your Akan name will be displayed below:</strong></h4>
         <p id="result"></p>
       </div>
     </div>
