add new file trial.js with shorter and non-repeated code

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </div>
 
-    <script src="script/akan.js" ></script>
+    <script src="script/test.js" ></script>
 
   </body>
 </html>
