--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="content">
       <div class="container">
-        <h1>Welcome to the Akan name generator!</h1>
+        <h1>The Akan name generator!</h1>
         <p>Hello there! This is a web application that takes your birthday details and calculates the day of the week you were born and then depending on your gender, outputs your Akan Name. <a class="research" href="https://en.wikipedia.org/wiki/Akan_names" target="_blank">Akan names</a> are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born. </p>
         <p>To find out what your Akan name is, proceed to filling the form below and clicking the generate name button.
         <form class="myform" onsubmit="return getAkanName()">
